fixed styling for profile image overflowing out of container

--- a/src/Stats-Anime/user_profileStyle.css
+++ b/src/Stats-Anime/user_profileStyle.css
@@ -36,29 +36,35 @@
     align-items: center;
     gap: 2.1em;
 }
-
-.side-profile .img-container{
+.img-outer-container{
+    position: relative;
     width: 10em;
     height: 10em;
-    border: 3px solid lightblue;
+    margin: 2em 0 0 0;
+}
+
+.side-profile .img-outer-container .img-container{
+    
+    width: 100%;
+    height: 100%;
     /* border: 2px solid red; */
-   margin: 2em 0 0 0;
-   position: relative;
-   overflow: hidden;
+   
+   border: 3px solid lightblue;
+  overflow: hidden;
 }
 .img-container img{
     width: 105%;
     object-fit: cover;
     aspect-ratio: 1/1;
 }
-.img-container .img-edit{
+.img-outer-container .img-edit{
    
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
 }
-.img-container .img-edit #label-img{
+.img-outer-container .img-edit #label-img{
     position: absolute;
     /* width: 2em;
     height: 2em; */
@@ -72,7 +78,7 @@
     justify-content: center;
     align-items: center;
 }
-.img-container .img-edit #label-img ion-icon{
+.img-outer-container .img-edit #label-img ion-icon{
   transform: translate(0);
   margin: 0;
  
